Fine-tuned background, fixing font issue on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@
 body {
     width: 100%;
     height: 100%;
+    font-family: 'Josefin Sans', sans-serif;
 }
 main {
     width: 100%;
@@ -39,12 +40,9 @@ section:first-child {
     width: 100%;
     height: 100%;
     font-display: 100;
-    background: url("/img/bg-pattern-mobile.svg"), #FFF7F8;
+    background: #FFF7F8;
     background-repeat: no-repeat;
-    background-size: cover;
-
-    
-    
+    background-size: cover; 
 }
 .centerizer {
     width: 100%;
@@ -131,6 +129,7 @@ section:nth-child(2) {
     display: none;
     background: url("/img/hero-desktop.jpg");
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .attribution { display: none; font-size: 11px; text-align: center; }
@@ -152,6 +151,11 @@ section:nth-child(2) {
 
 
 @include tablet {
+    section:first-child {
+        background: url("../img/bg-pattern-desktop.svg"), #FFF7F8;
+        background-repeat: none;
+        background-size: cover;
+    }
     h1 {
         margin: initial;
     }
